Ajout du projet amalVF